# MockSim

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  MOCKSIM_DEMO.md  PROJECT.md  README.md  TODOS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_trazmo_bridge_ids.py  0003_outbox_dispatch_format.py  0004_admin_users.py  0005_synthetic_documents.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  api.ts  auth.tsx  index.css  main.tsx  types.ts
dashboard/src/components/: ClockWidget.tsx  JsonViewer.tsx  Layout.tsx  StatCard.tsx  StatusBadge.tsx
dashboard/src/pages/: BankPage.tsx  LoginPage.tsx  OnboardingPage.tsx  Overview.tsx  POSPage.tsx  PlaygroundPage.tsx  ScenariosPage.tsx  SettingsPage.tsx  WebhooksPage.tsx
dashboard/src/utils/: randomize.ts
scripts/: README.md  seed_default.py  seed_e2e.py  smoke_e2e.py
src/mocksim/: clock.py  config.py  main.py
src/mocksim/admin/: api.py
src/mocksim/auth/: __init__.py  api.py  bootstrap.py  password.py
src/mocksim/bank/: api.py  mandates.py  payments.py  regions.py
src/mocksim/core/: accounts.py  errors.py  idempotency.py  identifiers.py  money.py  outbox.py  scenarios.py  scheduler.py  sim_scheduler.py  tenancy.py  webhook.py
src/mocksim/iso20022/: camt.py  (+2 more)
tests/golden/: 1link-credit.json  hbl-pos-sale.json
tests/property/: test_iban.py  test_money.py
tests/scenarios/: test_bank_payments.py  test_gmv_generator.py  test_trazmo_settlement_emitter.py
(+10 files in other folders)
