[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mocksim"
version = "0.1.0"
description = "MockSim — simulation harness for Trazmo's lending infrastructure"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "python-ulid>=3.0",
    "httpx>=0.28",
    "tenacity>=9.0",
    "apscheduler>=3.10",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29",
    "faker>=33.0",
    "aiofiles>=24.1",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.8",
    "hypothesis>=6.122",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mocksim"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/mocksim --cov-report=term-missing --cov-branch"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
